# silkdle

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
data/: zones.toml
frontend/: index.html
src/: compare.rs  handlers.rs  main.rs  models.rs  state.rs  templates.rs  utils.rs
static/: style.css
templates/: base.html  homepage.html  login.html
