[package]
name = "silkdle"
version = "0.2.1"
edition = "2024"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9.7"
tower-http = { version = "0.6.6", features = ["fs"] }
