[package]
name = "silkdle"
version = "0.5.1"
edition = "2024"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
chrono = "0.4.42"
chrono-tz = "0.10.4"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9.7"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-cookies = "0.10"
uuid = { version = "1", features = ["v4"] }
